<resources>
    <string name="app_name">梦音乐</string>
    <string name="db_name_local_song">T_LOCAL_SONG</string>
    <string name="undefined">未知</string>
    <string name="complete">完成</string>
    <string name="ascend">升序</string>
    <string name="descend">降序</string>
    <string name="empty" />
    <string name="select_all">全选</string>
    <string name="sort_ascend_by_name">按歌名升序</string>
    <string name="sort_descend_by_name">按歌名降序</string>
    <string name="sort_by_add_time">按添加时间排序</string>
    <string name="delete_all">全删</string>
    <string name="menu_song_add">添加歌曲</string>
    <string name="menu_song_del">删除</string>
    <string name="menu_song_detail">歌曲信息</string>
    <string name="sort_by_play_count">按播放量排序</string>
    <string name="song_name">歌名</string>
    <string name="song_artist">歌手</string>
    <string name="file_path">文件路径</string>
    <string name="file_play_count">播放量</string>

    <string name="menu_song_favorite">收藏</string>
    <string name="menu_song_favorite_batch">批量收藏</string>

    <string name="menu_song_config_export">导出配置</string>
    <string name="menu_song_config_import">导入配置</string>

    <string name="notify_action_previous">上一曲</string>
    <string name="notify_action_play_pause">播放/暂停</string>
    <string name="notify_action_next">下一曲</string>
    <string name="notify_action_stop">关闭</string>

</resources>
