<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/tv_song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_margin"
            android:layout_marginTop="15dp"
            android:text="@string/song_name"
            android:textSize="@dimen/font_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/et_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_margin"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="@dimen/detail_margin"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_song_name" />

    <TextView
            android:id="@+id/tv_artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_margin"
            android:layout_marginTop="10dp"
            android:text="@string/song_artist"
            android:textSize="@dimen/font_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_song_name" />

    <EditText
            android:id="@+id/et_artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_margin"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="@dimen/detail_margin"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/empty"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_artist_name" />

    <TextView
            android:id="@+id/lb_detail_file_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_margin"
            android:layout_marginTop="10dp"
            android:text="@string/file_path"
            android:textSize="@dimen/font_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_artist_name" />

    <TextView
            android:id="@+id/tv_detail_file_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/detail_margin"
            android:layout_marginEnd="@dimen/detail_margin"
            android:layout_marginTop="10dp"
            android:text="@string/empty"
            android:textSize="@dimen/font_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lb_detail_file_path" />


</androidx.constraintlayout.widget.ConstraintLayout>
